--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,13 @@
 		<dependency>
 			<groupId>com.miglayout</groupId>
 			<artifactId>miglayout-swing</artifactId>
-			<version>5.0</version>
+			<version>5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout-javafx</artifactId>
+			<version>5.1</version> 
 		</dependency>
 
 	</dependencies>
